--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -11213,7 +11213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11222,7 +11222,7 @@
     "    \"name\": \"product_name\",\n",
     "    \"extra_labels\": \"labels\",\n",
     "    \"image_url\": \"image_url\",\n",
-    "    \"brand\": \"brand_owner\",\n",
+    "    \"brand\": \"brands\",\n",
     "    \"categories\": \"categories\",\n",
     "    \"nutriscore_grade\": \"nutriscore_grade\",\n",
     "    \"nutriscore_score\": \"nutriscore_score\",\n",
@@ -11233,7 +11233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11249,20 +11249,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'brand_owner'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [37], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mfor\u001b[39;00m product \u001b[39min\u001b[39;00m products:\n\u001b[1;32m      3\u001b[0m     \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m column_mapping\u001b[39m.\u001b[39mkeys():\n\u001b[0;32m----> 4\u001b[0m         data\u001b[39m.\u001b[39mupdate(get_mapping(product, key, column_mapping[key]))\n\u001b[1;32m      5\u001b[0m data\n",
-      "Cell \u001b[0;32mIn [36], line 7\u001b[0m, in \u001b[0;36mget_mapping\u001b[0;34m(data, key, value)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m val \u001b[39min\u001b[39;00m values:\n\u001b[1;32m      6\u001b[0m     \u001b[39mif\u001b[39;00m is_all \u001b[39mand\u001b[39;00m val \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mall\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m     _data \u001b[39m=\u001b[39m _data[val]\n\u001b[1;32m      8\u001b[0m \u001b[39mreturn\u001b[39;00m {key: _data} \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m is_all \u001b[39melse\u001b[39;00m _data\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'brand_owner'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'id': '8003130145827',\n",
+       " 'name': 'Piu’ Gusto',\n",
+       " 'extra_labels': 'en:green-dot',\n",
+       " 'image_url': 'https://images.openfoodfacts.org/images/products/800/313/014/5827/front_it.9.400.jpg',\n",
+       " 'brand': 'San Carlo',\n",
+       " 'categories': 'en:plant-based-foods',\n",
+       " 'nutriscore_grade': 'd',\n",
+       " 'nutriscore_score': 15,\n",
+       " 'energy': 2075,\n",
+       " 'energy_points': 6,\n",
+       " 'energy_value': 496,\n",
+       " 'fiber': 5.5,\n",
+       " 'fiber_points': 5,\n",
+       " 'fiber_value': 5.5,\n",
+       " 'fruits_vegetables_nuts_colza_walnut_olive_oils': 0,\n",
+       " 'fruits_vegetables_nuts_colza_walnut_olive_oils_points': 0,\n",
+       " 'fruits_vegetables_nuts_colza_walnut_olive_oils_value': 0,\n",
+       " 'grade': 'd',\n",
+       " 'is_beverage': 0,\n",
+       " 'is_cheese': 0,\n",
+       " 'is_fat': 0,\n",
+       " 'is_water': 0,\n",
+       " 'negative_points': 20,\n",
+       " 'positive_points': 5,\n",
+       " 'proteins': 7.7,\n",
+       " 'proteins_points': 4,\n",
+       " 'proteins_value': 7.7,\n",
+       " 'saturated_fat': 9,\n",
+       " 'saturated_fat_points': 8,\n",
+       " 'saturated_fat_ratio': 34.6153846153846,\n",
+       " 'saturated_fat_ratio_points': 5,\n",
+       " 'saturated_fat_ratio_value': 34.6,\n",
+       " 'saturated_fat_value': 9,\n",
+       " 'score': 15,\n",
+       " 'sodium': 0.56,\n",
+       " 'sodium_points': 6,\n",
+       " 'sodium_value': 0.56,\n",
+       " 'sugars': 1.7,\n",
+       " 'sugars_points': 0,\n",
+       " 'sugars_value': 1.7,\n",
+       " 'carbohydrates': 55,\n",
+       " 'carbohydrates_100g': 55,\n",
+       " 'carbohydrates_unit': 'g',\n",
+       " 'carbohydrates_value': 55,\n",
+       " 'energy-kcal': 496,\n",
+       " 'energy-kcal_100g': 496,\n",
+       " 'energy-kcal_unit': 'kcal',\n",
+       " 'energy-kcal_value': 496,\n",
+       " 'energy-kcal_value_computed': 495.8,\n",
+       " 'energy_100g': 2075,\n",
+       " 'energy_unit': 'kcal',\n",
+       " 'fat': 26,\n",
+       " 'fat_100g': 26,\n",
+       " 'fat_unit': 'g',\n",
+       " 'fat_value': 26,\n",
+       " 'fiber_100g': 5.5,\n",
+       " 'fiber_unit': 'g',\n",
+       " 'nutrition-score-fr': 15,\n",
+       " 'nutrition-score-fr_100g': 15,\n",
+       " 'proteins_100g': 7.7,\n",
+       " 'proteins_unit': 'g',\n",
+       " 'salt': 1.4,\n",
+       " 'salt_100g': 1.4,\n",
+       " 'salt_unit': 'g',\n",
+       " 'salt_value': 1.4,\n",
+       " 'saturated-fat': 9,\n",
+       " 'saturated-fat_100g': 9,\n",
+       " 'saturated-fat_unit': 'g',\n",
+       " 'saturated-fat_value': 9,\n",
+       " 'sodium_100g': 0.56,\n",
+       " 'sodium_unit': 'g',\n",
+       " 'sugars_100g': 1.7,\n",
+       " 'sugars_unit': 'g'}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
