--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -10574,6 +10574,7 @@
    "outputs": [],
    "source": [
     "products = list()\n",
+    "total_data_points = 1000\n",
     "for _product in openfoodfacts.products.get_all_by_category(category.get('id')):\n",
     "    products.append(_product)\n",
     "    break"
