--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -10574,10 +10574,11 @@
    "outputs": [],
    "source": [
     "products = list()\n",
-    "total_data_points = 1000\n",
+    "total_data_points, i = 1000, 0\n",
     "for _product in openfoodfacts.products.get_all_by_category(category.get('id')):\n",
     "    products.append(_product)\n",
-    "    break"
+    "    if i >= total_data_points: break\n",
+    "    i += 1"
    ]
   },
   {
