--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -10583,14 +10583,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "column_mapping = {\n",
     "    \"id\": \"id\",\n",
     "    \"name\": \"product_name\",\n",
-    "    \"extra_labels\": \"labels\",\n",
     "    \"image_url\": \"image_url\",\n",
     "    \"brand\": \"brands\",\n",
     "    \"categories\": \"categories\",\n",
@@ -11415,7 +11414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11431,26 +11430,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing '0' product...\n"
+      "Processing '0' product...\n",
+      "Processing '1' product...\n",
+      "Processing '2' product...\n",
+      "Processing '3' product...\n"
      ]
     },
     {
      "ename": "KeyError",
-     "evalue": "'labels'",
+     "evalue": "'nutriscore_grade'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [46], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mProcessing \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mindex\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m product...\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m     \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m column_mapping\u001b[39m.\u001b[39mkeys():\n\u001b[0;32m----> 5\u001b[0m         data\u001b[39m.\u001b[39mupdate(get_mapping(product, key, column_mapping[key]))\n\u001b[1;32m      6\u001b[0m data\n",
-      "Cell \u001b[0;32mIn [43], line 7\u001b[0m, in \u001b[0;36mget_mapping\u001b[0;34m(data, key, value)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m val \u001b[39min\u001b[39;00m values:\n\u001b[1;32m      6\u001b[0m     \u001b[39mif\u001b[39;00m is_all \u001b[39mand\u001b[39;00m val \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mall\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m     _data \u001b[39m=\u001b[39m _data[val]\n\u001b[1;32m      8\u001b[0m \u001b[39mreturn\u001b[39;00m {key: _data} \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m is_all \u001b[39melse\u001b[39;00m _data\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'labels'"
+      "Cell \u001b[0;32mIn [51], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mProcessing \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mindex\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m product...\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m     \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m column_mapping\u001b[39m.\u001b[39mkeys():\n\u001b[0;32m----> 5\u001b[0m         data\u001b[39m.\u001b[39mupdate(get_mapping(product, key, column_mapping[key]))\n\u001b[1;32m      6\u001b[0m data\n",
+      "Cell \u001b[0;32mIn [50], line 7\u001b[0m, in \u001b[0;36mget_mapping\u001b[0;34m(data, key, value)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m val \u001b[39min\u001b[39;00m values:\n\u001b[1;32m      6\u001b[0m     \u001b[39mif\u001b[39;00m is_all \u001b[39mand\u001b[39;00m val \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mall\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m     _data \u001b[39m=\u001b[39m _data[val]\n\u001b[1;32m      8\u001b[0m \u001b[39mreturn\u001b[39;00m {key: _data} \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m is_all \u001b[39melse\u001b[39;00m _data\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'nutriscore_grade'"
      ]
     }
    ],
