--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -10594,7 +10594,7 @@
     "    \"brand\": \"brands\",\n",
     "    \"categories\": \"categories\",\n",
     "    # \"nutriscore_grade\": \"nutriscore_grade\",\n",
-    "    \"nutriscore_score\": \"nutriscore_score\",\n",
+    "    # \"nutriscore_score\": \"nutriscore_score\",\n",
     "    \"nutriscore_data\": \"nutriscore_data.all\",\n",
     "    \"nutriments\": \"nutriments.all\",\n",
     "}"
