--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -10576,6 +10576,9 @@
     "products = list()\n",
     "total_data_points, i = 10, 0\n",
     "for _product in openfoodfacts.products.get_all_by_category(category.get('id')):\n",
+    "    for c in required_columns:\n",
+    "        if c not in _product:\n",
+    "            continue\n",
     "    products.append(_product)\n",
     "    if i >= total_data_points: break\n",
     "    i += 1"
@@ -10583,7 +10586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10602,7 +10605,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "required_columns = [x.split(\".\")[0] for x in list(column_mapping.values())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -11403,7 +11415,7 @@
        " 'vitamins_tags': []}"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11414,7 +11426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11430,7 +11442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -11445,14 +11457,14 @@
     },
     {
      "ename": "KeyError",
-     "evalue": "'nutriscore_score'",
+     "evalue": "'nutriscore_data'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [57], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mProcessing \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mindex\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m product...\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m     \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m column_mapping\u001b[39m.\u001b[39mkeys():\n\u001b[0;32m----> 5\u001b[0m         data\u001b[39m.\u001b[39mupdate(get_mapping(product, key, column_mapping[key]))\n\u001b[1;32m      6\u001b[0m data\n",
-      "Cell \u001b[0;32mIn [56], line 7\u001b[0m, in \u001b[0;36mget_mapping\u001b[0;34m(data, key, value)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m val \u001b[39min\u001b[39;00m values:\n\u001b[1;32m      6\u001b[0m     \u001b[39mif\u001b[39;00m is_all \u001b[39mand\u001b[39;00m val \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mall\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m     _data \u001b[39m=\u001b[39m _data[val]\n\u001b[1;32m      8\u001b[0m \u001b[39mreturn\u001b[39;00m {key: _data} \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m is_all \u001b[39melse\u001b[39;00m _data\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'nutriscore_score'"
+      "Cell \u001b[0;32mIn [62], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mProcessing \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mindex\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m product...\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m     \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m column_mapping\u001b[39m.\u001b[39mkeys():\n\u001b[0;32m----> 5\u001b[0m         data\u001b[39m.\u001b[39mupdate(get_mapping(product, key, column_mapping[key]))\n\u001b[1;32m      6\u001b[0m data\n",
+      "Cell \u001b[0;32mIn [61], line 7\u001b[0m, in \u001b[0;36mget_mapping\u001b[0;34m(data, key, value)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m val \u001b[39min\u001b[39;00m values:\n\u001b[1;32m      6\u001b[0m     \u001b[39mif\u001b[39;00m is_all \u001b[39mand\u001b[39;00m val \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mall\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m     _data \u001b[39m=\u001b[39m _data[val]\n\u001b[1;32m      8\u001b[0m \u001b[39mreturn\u001b[39;00m {key: _data} \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m is_all \u001b[39melse\u001b[39;00m _data\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'nutriscore_data'"
      ]
     }
    ],
