--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -10577,8 +10577,7 @@
     "total_data_points, i = 10, 0\n",
     "for _product in openfoodfacts.products.get_all_by_category(category.get('id')):\n",
     "    for c in required_columns:\n",
-    "        if c not in _product:\n",
-    "            continue\n",
+    "        if c not in _product: continue\n",
     "    products.append(_product)\n",
     "    if i >= total_data_points: break\n",
     "    i += 1"
