--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -10576,8 +10576,9 @@
     "products = list()\n",
     "total_data_points, i = 10, 0\n",
     "for _product in openfoodfacts.products.get_all_by_category(category.get('id')):\n",
+    "    all_columns = _product.keys()\n",
     "    for c in required_columns:\n",
-    "        if c not in _product: continue\n",
+    "        if c not in all_columns: continue\n",
     "    products.append(_product)\n",
     "    if i >= total_data_points: break\n",
     "    i += 1"
