--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -10569,16 +10569,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "products = list()\n",
     "total_data_points, i = 10, 0\n",
     "for _product in openfoodfacts.products.get_all_by_category(category.get('id')):\n",
-    "    all_columns = _product.keys()\n",
+    "    all_columns = list(_product.keys())\n",
     "    for c in required_columns:\n",
-    "        if c not in all_columns: continue\n",
+    "        if c not in all_columns: pass\n",
     "    products.append(_product)\n",
     "    if i >= total_data_points: break\n",
     "    i += 1"
@@ -10586,7 +10586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10605,7 +10605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10614,7 +10614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -10689,7 +10689,7 @@
        "  '4xxxxxxxxxxxx'],\n",
        " 'compared_to_category': 'en:misos',\n",
        " 'complete': 0,\n",
-       " 'completeness': 0.5875,\n",
+       " 'completeness': 0.6875,\n",
        " 'correctors_tags': ['openfoodfacts-contributors',\n",
        "  'autorotate-bot',\n",
        "  'yuka.EpRoF_SVM8wmNvft3bBogCbnKr_GJMR3IXQzog',\n",
@@ -11082,16 +11082,17 @@
        " 'ecoscore_grade': 'b',\n",
        " 'ecoscore_score': 74,\n",
        " 'ecoscore_tags': ['b'],\n",
-       " 'editors_tags': ['prepperapp',\n",
-       "  'kiliweb',\n",
-       "  'yuka.sY2b0xO6T85zoF3NwEKvlmFCXNfd-SPcLgTRg0DV4dKycp_0RY5u3KLVYqs',\n",
-       "  'archanox',\n",
+       " 'editors_tags': ['autorotate-bot',\n",
+       "  'openfoodfacts-contributors',\n",
        "  'yuka.WEt3N0ZZa2p2L2xXbDgwbm9BL3B5dmxFbUxLSmRFS3NGYlpBSVE9PQ',\n",
        "  'roboto-app',\n",
-       "  'autorotate-bot',\n",
-       "  'openfoodfacts-contributors',\n",
-       "  'yuka.EpRoF_SVM8wmNvft3bBogCbnKr_GJMR3IXQzog'],\n",
+       "  'yuka.EpRoF_SVM8wmNvft3bBogCbnKr_GJMR3IXQzog',\n",
+       "  'kiliweb',\n",
+       "  'yuka.sY2b0xO6T85zoF3NwEKvlmFCXNfd-SPcLgTRg0DV4dKycp_0RY5u3KLVYqs',\n",
+       "  'prepperapp',\n",
+       "  'archanox'],\n",
        " 'entry_dates_tags': ['2018-05-26', '2018-05', '2018'],\n",
+       " 'expiration_date': '2023-03-27',\n",
        " 'food_groups': 'en:legumes',\n",
        " 'food_groups_tags': ['en:cereals-and-potatoes', 'en:legumes'],\n",
        " 'id': '4902663007524',\n",
@@ -11159,18 +11160,18 @@
        "  'nutrition_fr': {'angle': 0,\n",
        "   'coordinates_image_size': 'full',\n",
        "   'geometry': '0x0--1--1',\n",
-       "   'imgid': 4,\n",
+       "   'imgid': '4',\n",
        "   'normalize': None,\n",
-       "   'rev': 23,\n",
+       "   'rev': '23',\n",
        "   'sizes': {'100': {'h': 100, 'w': 57},\n",
        "    '200': {'h': 200, 'w': 113},\n",
        "    '400': {'h': 400, 'w': 226},\n",
        "    'full': {'h': 1200, 'w': 679}},\n",
        "   'white_magic': None,\n",
-       "   'x1': -1,\n",
-       "   'x2': -1,\n",
-       "   'y1': -1,\n",
-       "   'y2': -1}},\n",
+       "   'x1': '-1',\n",
+       "   'x2': '-1',\n",
+       "   'y1': '-1',\n",
+       "   'y2': '-1'}},\n",
        " 'informers_tags': ['yuka.WEt3N0ZZa2p2L2xXbDgwbm9BL3B5dmxFbUxLSmRFS3NGYlpBSVE9PQ',\n",
        "  'kiliweb',\n",
        "  'openfoodfacts-contributors',\n",
@@ -11192,11 +11193,11 @@
        " 'languages_hierarchy': ['en:french'],\n",
        " 'languages_tags': ['en:french', 'en:1'],\n",
        " 'last_edit_dates_tags': ['2022-11-21', '2022-11', '2022'],\n",
-       " 'last_editor': 'kiliweb',\n",
+       " 'last_editor': 'roboto-app',\n",
        " 'last_image_dates_tags': ['2022-11-21', '2022-11', '2022'],\n",
        " 'last_image_t': 1669023358,\n",
-       " 'last_modified_by': 'kiliweb',\n",
-       " 'last_modified_t': 1669023359,\n",
+       " 'last_modified_by': 'roboto-app',\n",
+       " 'last_modified_t': 1669023979,\n",
        " 'lc': 'fr',\n",
        " 'main_countries_tags': [],\n",
        " 'max_imgid': '4',\n",
@@ -11348,10 +11349,10 @@
        "  'top-country-de-scans-2021'],\n",
        " 'product_name': 'Pâte miso',\n",
        " 'product_name_fr': 'Pâte miso',\n",
-       " 'product_quantity': '400',\n",
+       " 'product_quantity': 400,\n",
        " 'quantity': '400g',\n",
        " 'removed_countries_tags': [],\n",
-       " 'rev': 23,\n",
+       " 'rev': 24,\n",
        " 'scans_n': 2,\n",
        " 'selected_images': {'front': {'display': {'fr': 'https://images.openfoodfacts.org/images/products/490/266/300/7524/front_fr.21.400.jpg'},\n",
        "   'small': {'fr': 'https://images.openfoodfacts.org/images/products/490/266/300/7524/front_fr.21.200.jpg'},\n",
@@ -11363,11 +11364,11 @@
        "   'small': {'fr': 'https://images.openfoodfacts.org/images/products/490/266/300/7524/nutrition_fr.23.200.jpg'},\n",
        "   'thumb': {'fr': 'https://images.openfoodfacts.org/images/products/490/266/300/7524/nutrition_fr.23.100.jpg'}}},\n",
        " 'sortkey': 1591704155,\n",
-       " 'states': 'en:to-be-completed, en:nutrition-facts-completed, en:ingredients-to-be-completed, en:expiration-date-to-be-completed, en:packaging-code-to-be-completed, en:characteristics-to-be-completed, en:origins-to-be-completed, en:categories-completed, en:brands-completed, en:packaging-to-be-completed, en:quantity-completed, en:product-name-completed, en:photos-to-be-validated, en:packaging-photo-to-be-selected, en:nutrition-photo-selected, en:ingredients-photo-selected, en:front-photo-selected, en:photos-uploaded',\n",
+       " 'states': 'en:to-be-completed, en:nutrition-facts-completed, en:ingredients-to-be-completed, en:expiration-date-completed, en:packaging-code-to-be-completed, en:characteristics-to-be-completed, en:origins-to-be-completed, en:categories-completed, en:brands-completed, en:packaging-to-be-completed, en:quantity-completed, en:product-name-completed, en:photos-to-be-validated, en:packaging-photo-to-be-selected, en:nutrition-photo-selected, en:ingredients-photo-selected, en:front-photo-selected, en:photos-uploaded',\n",
        " 'states_hierarchy': ['en:to-be-completed',\n",
        "  'en:nutrition-facts-completed',\n",
        "  'en:ingredients-to-be-completed',\n",
-       "  'en:expiration-date-to-be-completed',\n",
+       "  'en:expiration-date-completed',\n",
        "  'en:packaging-code-to-be-completed',\n",
        "  'en:characteristics-to-be-completed',\n",
        "  'en:origins-to-be-completed',\n",
@@ -11385,7 +11386,7 @@
        " 'states_tags': ['en:to-be-completed',\n",
        "  'en:nutrition-facts-completed',\n",
        "  'en:ingredients-to-be-completed',\n",
-       "  'en:expiration-date-to-be-completed',\n",
+       "  'en:expiration-date-completed',\n",
        "  'en:packaging-code-to-be-completed',\n",
        "  'en:characteristics-to-be-completed',\n",
        "  'en:origins-to-be-completed',\n",
@@ -11415,7 +11416,7 @@
        " 'vitamins_tags': []}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -11426,7 +11427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11442,7 +11443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -11462,8 +11463,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [62], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mProcessing \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mindex\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m product...\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m     \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m column_mapping\u001b[39m.\u001b[39mkeys():\n\u001b[0;32m----> 5\u001b[0m         data\u001b[39m.\u001b[39mupdate(get_mapping(product, key, column_mapping[key]))\n\u001b[1;32m      6\u001b[0m data\n",
-      "Cell \u001b[0;32mIn [61], line 7\u001b[0m, in \u001b[0;36mget_mapping\u001b[0;34m(data, key, value)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m val \u001b[39min\u001b[39;00m values:\n\u001b[1;32m      6\u001b[0m     \u001b[39mif\u001b[39;00m is_all \u001b[39mand\u001b[39;00m val \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mall\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m     _data \u001b[39m=\u001b[39m _data[val]\n\u001b[1;32m      8\u001b[0m \u001b[39mreturn\u001b[39;00m {key: _data} \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m is_all \u001b[39melse\u001b[39;00m _data\n",
+      "Cell \u001b[0;32mIn [75], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mProcessing \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mindex\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m product...\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m     \u001b[39mfor\u001b[39;00m key \u001b[39min\u001b[39;00m column_mapping\u001b[39m.\u001b[39mkeys():\n\u001b[0;32m----> 5\u001b[0m         data\u001b[39m.\u001b[39mupdate(get_mapping(product, key, column_mapping[key]))\n\u001b[1;32m      6\u001b[0m data\n",
+      "Cell \u001b[0;32mIn [74], line 7\u001b[0m, in \u001b[0;36mget_mapping\u001b[0;34m(data, key, value)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mfor\u001b[39;00m val \u001b[39min\u001b[39;00m values:\n\u001b[1;32m      6\u001b[0m     \u001b[39mif\u001b[39;00m is_all \u001b[39mand\u001b[39;00m val \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mall\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m     _data \u001b[39m=\u001b[39m _data[val]\n\u001b[1;32m      8\u001b[0m \u001b[39mreturn\u001b[39;00m {key: _data} \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m is_all \u001b[39melse\u001b[39;00m _data\n",
       "\u001b[0;31mKeyError\u001b[0m: 'nutriscore_data'"
      ]
     }
