--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -10577,6 +10577,7 @@
     "total_data_points, i = 10, 0\n",
     "for _product in openfoodfacts.products.get_all_by_category(category.get('id')):\n",
     "    all_columns = list(_product.keys())\n",
+    "    invalid = False\n",
     "    for c in required_columns:\n",
     "        if c not in all_columns: pass\n",
     "    products.append(_product)\n",
