--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -11445,7 +11445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -11464,162 +11464,56 @@
       "Processing '9' product...\n",
       "Processing '10' product...\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'id': '5060088706046',\n",
-       " 'name': 'NAKD Cacahuètes - 35g (1p)',\n",
-       " 'image_url': 'https://images.openfoodfacts.org/images/products/506/008/870/6046/front_fr.47.400.jpg',\n",
-       " 'brand': 'nākd,Nakd',\n",
-       " 'categories': \"Aliments et boissons à base de végétaux,Aliments d'origine végétale,Snacks,Snacks sucrés,Fruits à coques et dérivés,Barres,Barres de céréales,Compléments alimentaires,Compléments pour le Bodybuilding,Barres de fruits à coques,Barres de fruits & noix, Barres de céréales aux fruits\",\n",
-       " 'energy': 1776,\n",
-       " 'energy_points': 5,\n",
-       " 'energy_value': 1776,\n",
-       " 'fiber': 5,\n",
-       " 'fiber_points': 5,\n",
-       " 'fiber_value': 5,\n",
-       " 'fruits_vegetables_nuts_colza_walnut_olive_oils': 149.246231155779,\n",
-       " 'fruits_vegetables_nuts_colza_walnut_olive_oils_points': 5,\n",
-       " 'fruits_vegetables_nuts_colza_walnut_olive_oils_value': 149.2,\n",
-       " 'grade': 'c',\n",
-       " 'is_beverage': 0,\n",
-       " 'is_cheese': 0,\n",
-       " 'is_fat': 0,\n",
-       " 'is_water': 0,\n",
-       " 'negative_points': 18,\n",
-       " 'positive_points': 15,\n",
-       " 'proteins': 13.6,\n",
-       " 'proteins_points': 5,\n",
-       " 'proteins_value': 13.6,\n",
-       " 'saturated_fat': 3.9,\n",
-       " 'saturated_fat_points': 3,\n",
-       " 'saturated_fat_ratio': 18.1395348837209,\n",
-       " 'saturated_fat_ratio_points': 2,\n",
-       " 'saturated_fat_ratio_value': 18.1,\n",
-       " 'saturated_fat_value': 3.9,\n",
-       " 'score': 3,\n",
-       " 'sodium': 0.24,\n",
-       " 'sodium_points': 2,\n",
-       " 'sodium_value': 0.24,\n",
-       " 'sugars': 38.8,\n",
-       " 'sugars_points': 8,\n",
-       " 'sugars_value': 38.8,\n",
-       " 'carbohydrates': 41.7,\n",
-       " 'carbohydrates_100g': 41.7,\n",
-       " 'carbohydrates_unit': 'g',\n",
-       " 'carbohydrates_value': 41.7,\n",
-       " 'energy-kcal': 425,\n",
-       " 'energy-kcal_100g': 425,\n",
-       " 'energy-kcal_unit': 'kcal',\n",
-       " 'energy-kcal_value': 425,\n",
-       " 'energy-kcal_value_computed': 424.7,\n",
-       " 'energy_100g': 1776,\n",
-       " 'energy_unit': 'kJ',\n",
-       " 'fat': 21.5,\n",
-       " 'fat_100g': 21.5,\n",
-       " 'fat_unit': 'g',\n",
-       " 'fat_value': 21.5,\n",
-       " 'fiber_100g': 5,\n",
-       " 'fiber_unit': 'g',\n",
-       " 'nutrition-score-fr': 3,\n",
-       " 'nutrition-score-fr_100g': 3,\n",
-       " 'proteins_100g': 13.6,\n",
-       " 'proteins_unit': 'g',\n",
-       " 'salt': 0.6,\n",
-       " 'salt_100g': 0.6,\n",
-       " 'salt_unit': 'g',\n",
-       " 'salt_value': 0.6,\n",
-       " 'saturated-fat': 3.9,\n",
-       " 'saturated-fat_100g': 3.9,\n",
-       " 'saturated-fat_unit': 'g',\n",
-       " 'saturated-fat_value': 3.9,\n",
-       " 'sodium_100g': 0.24,\n",
-       " 'sodium_unit': 'g',\n",
-       " 'sugars_100g': 38.8,\n",
-       " 'sugars_unit': 'g',\n",
-       " 'carbohydrates_serving': 14.6,\n",
-       " 'energy-kcal_serving': 149,\n",
-       " 'energy_serving': 622,\n",
-       " 'fat_serving': 7.52,\n",
-       " 'fiber_serving': 1.75,\n",
-       " 'fruits-vegetables-nuts-estimate-from-ingredients_100g': 99,\n",
-       " 'fruits-vegetables-nuts-estimate-from-ingredients_serving': 99,\n",
-       " 'nova-group': 4,\n",
-       " 'nova-group_100g': 4,\n",
-       " 'nova-group_serving': 4,\n",
-       " 'proteins_serving': 4.76,\n",
-       " 'salt_serving': 0.21,\n",
-       " 'saturated-fat_serving': 1.36,\n",
-       " 'sodium_serving': 0.084,\n",
-       " 'sugars_serving': 13.6,\n",
-       " 'energy-kj': 1776,\n",
-       " 'energy-kj_100g': 1776,\n",
-       " 'energy-kj_serving': 622,\n",
-       " 'energy-kj_unit': 'kJ',\n",
-       " 'energy-kj_value': 1776,\n",
-       " 'energy-kj_value_computed': 1775.6,\n",
-       " 'magnesium': 0.0848,\n",
-       " 'magnesium_100g': 0.0848,\n",
-       " 'magnesium_label': 'Magnesium',\n",
-       " 'magnesium_serving': 0.0339,\n",
-       " 'magnesium_unit': 'mg',\n",
-       " 'magnesium_value': 84.8,\n",
-       " 'fiber_modifier': '-',\n",
-       " 'carbon-footprint-from-known-ingredients_100g': 15.9,\n",
-       " 'carbon-footprint-from-known-ingredients_product': 5.56,\n",
-       " 'carbon-footprint-from-known-ingredients_serving': 5.56,\n",
-       " 'calcium': 0.12,\n",
-       " 'calcium_100g': 0.12,\n",
-       " 'calcium_serving': 0.24,\n",
-       " 'calcium_unit': 'mg',\n",
-       " 'calcium_value': 120,\n",
-       " 'vitamin-b12': 0.00038,\n",
-       " 'vitamin-b12_100g': 0.00038,\n",
-       " 'vitamin-b12_serving': 0.00076,\n",
-       " 'vitamin-b12_unit': 'mg',\n",
-       " 'vitamin-b12_value': 0.38,\n",
-       " 'vitamin-b2': 0.00021,\n",
-       " 'vitamin-b2_100g': 0.00021,\n",
-       " 'vitamin-b2_serving': 0.00042,\n",
-       " 'vitamin-b2_unit': 'mg',\n",
-       " 'vitamin-b2_value': 0.21,\n",
-       " 'vitamin-d': 7.5e-07,\n",
-       " 'vitamin-d_100g': 7.5e-07,\n",
-       " 'vitamin-d_label': 'Vitamine D',\n",
-       " 'vitamin-d_serving': 1.5e-06,\n",
-       " 'vitamin-d_unit': 'µg',\n",
-       " 'vitamin-d_value': 0.75,\n",
-       " 'vitamin-e': 0.0018,\n",
-       " 'vitamin-e_100g': 0.0018,\n",
-       " 'vitamin-e_label': 'Vitamine E',\n",
-       " 'vitamin-e_serving': 0.0036,\n",
-       " 'vitamin-e_unit': 'mg',\n",
-       " 'vitamin-e_value': 1.8,\n",
-       " 'fruits-vegetables-nuts': 99,\n",
-       " 'fruits-vegetables-nuts-dried': 99,\n",
-       " 'fruits-vegetables-nuts-dried_100g': 99,\n",
-       " 'fruits-vegetables-nuts-dried_serving': 99,\n",
-       " 'fruits-vegetables-nuts-dried_unit': 'g',\n",
-       " 'fruits-vegetables-nuts-dried_value': 99,\n",
-       " 'fruits-vegetables-nuts_100g': 99,\n",
-       " 'fruits-vegetables-nuts_serving': 99,\n",
-       " 'fruits-vegetables-nuts_unit': 'g',\n",
-       " 'fruits-vegetables-nuts_value': 99}"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = dict()\n",
+    "data = list()\n",
     "for index, product in enumerate(products):\n",
     "    print(f\"Processing '{index}' product...\")\n",
+    "    _data = dict()\n",
     "    for key in column_mapping.keys():\n",
-    "        data.update(get_mapping(product, key, column_mapping[key]))\n",
-    "data"
+    "        _data.update(get_mapping(product, key, column_mapping[key]))\n",
+    "    data.append(_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas.io.formats.string'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/nutri-score/lib/python3.11/site-packages/IPython/core/formatters.py:706\u001b[0m, in \u001b[0;36m__call__\u001b[0;34m(self, obj)\u001b[0m\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/nutri-score/lib/python3.11/site-packages/IPython/lib/pretty.py:410\u001b[0m, in \u001b[0;36mpretty\u001b[0;34m(self, obj)\u001b[0m\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/nutri-score/lib/python3.11/site-packages/IPython/lib/pretty.py:778\u001b[0m, in \u001b[0;36m_repr_pprint\u001b[0;34m(obj, p, cycle)\u001b[0m\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/nutri-score/lib/python3.11/site-packages/pandas/core/frame.py:1062\u001b[0m, in \u001b[0;36m__repr__\u001b[0;34m(self)\u001b[0m\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/nutri-score/lib/python3.11/site-packages/pandas/core/frame.py:1243\u001b[0m, in \u001b[0;36mto_string\u001b[0;34m(self, buf, columns, col_space, header, index, na_rep, formatters, float_format, sparsify, index_names, justify, max_rows, max_cols, show_dimensions, decimal, line_width, min_rows, max_colwidth, encoding)\u001b[0m\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/nutri-score/lib/python3.11/site-packages/pandas/io/formats/format.py:1133\u001b[0m, in \u001b[0;36mto_string\u001b[0;34m(self, buf, encoding, line_width)\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas.io.formats.string'"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas.io.formats.html'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/nutri-score/lib/python3.11/site-packages/IPython/core/formatters.py:342\u001b[0m, in \u001b[0;36m__call__\u001b[0;34m(self, obj)\u001b[0m\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/nutri-score/lib/python3.11/site-packages/pandas/core/frame.py:1104\u001b[0m, in \u001b[0;36m_repr_html_\u001b[0;34m(self)\u001b[0m\n",
+      "File \u001b[0;32m/opt/homebrew/Caskroom/mambaforge/base/envs/nutri-score/lib/python3.11/site-packages/pandas/io/formats/format.py:1096\u001b[0m, in \u001b[0;36mto_html\u001b[0;34m(self, buf, encoding, classes, notebook, border, table_id, render_links)\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas.io.formats.html'"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame.from_records(data)\n",
+    "df.head()"
    ]
   },
   {
