--- a/notebooks/test_ openfoodfacts.ipynb
+++ b/notebooks/test_ openfoodfacts.ipynb
@@ -11478,15 +11478,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 90,
    "metadata": {},
    "outputs": [
@@ -11522,7 +11513,7 @@
    ],
    "source": [
     "df = pd.DataFrame.from_records(data)\n",
-    "df.head()"
+    "df.head(2)"
    ]
   },
   {
